<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EstimApp</string>
    <string name="Cancel">Cancel</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="EnterName">Enter name</string>
    <string name="Authentication">Authentication</string>
    <string name="WaitingHeader">Waiting for work item</string>
    <string name="bla">Waiting for work item..</string>
    <string name="FinishLayoutHeaderName">Estimation conclusions</string>
    <string name="Escape">Escape</string>
</resources>
